ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/Schemes__c.object-meta.xml
<CustomObject>
    <label>Schemes</label>
    <nameField>
        <label>Schemes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schemes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>