ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/AC_Open_Charges__c.field-meta.xml
<CustomField>
    <fullName>AC_Open_Charges__c</fullName>
    <label>AC Open Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>