ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Agent_BL_code__c.field-meta.xml
<CustomField>
    <fullName>Agent_BL_code__c</fullName>
    <inlineHelpText>If multi-select needed, enter all codes with comma separate viz., AHH, AHZ</inlineHelpText>
    <label>Agent BL code</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>