ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Asset_Category__c.field-meta.xml
<CustomField>
    <fullName>Asset_Category__c</fullName>
    <label>Asset Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>