ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Branch_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Branch_Portfolio__c</fullName>
    <label>Branch Portfolio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>