ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Business_Executive__c.field-meta.xml
<CustomField>
    <fullName>Business_Executive__c</fullName>
    <inlineHelpText>If multi-select needed, enter all codes with comma separate viz., A,B,C</inlineHelpText>
    <label>Business Executive</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>