ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/CRM_IRR_Min__c.field-meta.xml
<CustomField>
    <fullName>CRM_IRR_Min__c</fullName>
    <label>CRM IRR Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>