ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Deal_no__c.field-meta.xml
<CustomField>
    <fullName>Deal_no__c</fullName>
    <label>Deal no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>