ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Dealer_discount_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Dealer_discount_to_Customer__c</fullName>
    <label>Dealer discount to Customer</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>