ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Dealer_DSA_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Dealer_DSA_Portfolio__c</fullName>
    <label>Dealer/DSA Portfolio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>