ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Dealer_incentive_amount_main_dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer_incentive_amount_main_dealer__c</fullName>
    <label>Dealer incentive amount - main dealer</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>