ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Dealer_incentive_amount_main_dealer_p__c.field-meta.xml
<CustomField>
    <fullName>Dealer_incentive_amount_main_dealer_p__c</fullName>
    <label>Dealer incentive amount - main dealer%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>