ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Dealer_Sub_dealer_name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Sub_dealer_name__c</fullName>
    <inlineHelpText>If multi-select needed, enter all codes with comma separate viz., BEN01012,BEN1021</inlineHelpText>
    <label>Dealer/Sub-dealer name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>