ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Delinquency_Fund__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Fund__c</fullName>
    <label>Delinquency Fund</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>