ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Deliquency_Fund_type__c.field-meta.xml
<CustomField>
    <fullName>Deliquency_Fund_type__c</fullName>
    <label>Deliquency Fund type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Separate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>