ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Dlr_Exp_Reimburse_Amt__c.field-meta.xml
<CustomField>
    <fullName>Dlr_Exp_Reimburse_Amt__c</fullName>
    <label>Dlr Exp. Reimburse Amt</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>