ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Dlr_Exp_Reimburse_Type__c.field-meta.xml
<CustomField>
    <fullName>Dlr_Exp_Reimburse_Type__c</fullName>
    <label>Dlr Exp. Reimburse Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Separate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>