ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Doc_Charges_p__c.field-meta.xml
<CustomField>
    <fullName>Doc_Charges_p__c</fullName>
    <label>Doc Charges%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>