ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/DocCharges__c.field-meta.xml
<CustomField>
    <fullName>DocCharges__c</fullName>
    <label>Doc Charges</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>