ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/DSA_Pay__c.field-meta.xml
<CustomField>
    <fullName>DSA_Pay__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DSA Pay</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>