ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/DSM_Incentive1_p__c.field-meta.xml
<CustomField>
    <fullName>DSM_Incentive1_p__c</fullName>
    <label>DSM Incentive1%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>