ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/DSM_Incentive2__c.field-meta.xml
<CustomField>
    <fullName>DSM_Incentive2__c</fullName>
    <label>DSM Incentive2</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>