ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/DSM_Name1__c.field-meta.xml
<CustomField>
    <fullName>DSM_Name1__c</fullName>
    <label>DSM Name1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>