ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Due_Date_Shift_Charges__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Shift_Charges__c</fullName>
    <label>Due Date Shift Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>