ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/ECS_verification_Not_Applicable__c.field-meta.xml
<CustomField>
    <fullName>ECS_verification_Not_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ECS verification Not Applicable</label>
    <type>Checkbox</type>
</CustomField>