ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Emp_No__c.field-meta.xml
<CustomField>
    <fullName>Emp_No__c</fullName>
    <label>Emp. No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>