ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Entity Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Non-Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>