ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/ExistingCustomer__c.field-meta.xml
<CustomField>
    <fullName>ExistingCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Customer</label>
    <type>Checkbox</type>
</CustomField>