ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Gift_through_dealer_amount__c.field-meta.xml
<CustomField>
    <fullName>Gift_through_dealer_amount__c</fullName>
    <label>Gift through dealer amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>