ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Gift_through_dealer_amount_p__c.field-meta.xml
<CustomField>
    <fullName>Gift_through_dealer_amount_p__c</fullName>
    <label>Gift through dealer amount%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>