ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/HP_Category_Range_Max__c.field-meta.xml
<CustomField>
    <fullName>HP_Category_Range_Max__c</fullName>
    <label>HP Category Range Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>