ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/HP_Category_Range_Min__c.field-meta.xml
<CustomField>
    <fullName>HP_Category_Range_Min__c</fullName>
    <label>HP Category Range Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>