ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/IIR_Ratio_Max__c.field-meta.xml
<CustomField>
    <fullName>IIR_Ratio_Max__c</fullName>
    <label>IIR Ratio Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>