ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Imputed_IRR_for_Low_IRR_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Imputed_IRR_for_Low_IRR_Scheme__c</fullName>
    <label>Imputed IRR% (for Low IRR Scheme)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>