ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Land_Acrage_Max__c.field-meta.xml
<CustomField>
    <fullName>Land_Acrage_Max__c</fullName>
    <label>Land Acrage Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>