ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Loan_amount_Max__c.field-meta.xml
<CustomField>
    <fullName>Loan_amount_Max__c</fullName>
    <label>Loan amount Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>