ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Loan_Amount_Min__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount_Min__c</fullName>
    <label>Loan Amount Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>