ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Low_IRR_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Low_IRR_Scheme__c</fullName>
    <label>Low IRR Scheme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>