ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/LTV_Max__c.field-meta.xml
<CustomField>
    <fullName>LTV_Max__c</fullName>
    <label>LTV Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>