ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/LTV_Min__c.field-meta.xml
<CustomField>
    <fullName>LTV_Min__c</fullName>
    <label>LTV Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>