ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Manufacturer_Code_Make__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Code_Make__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturer Code (Make)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>Make</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Schemes (Manufacturer Code (Make))</relationshipLabel>
    <relationshipName>Schemes1</relationshipName>
    <type>Lookup</type>
</CustomField>