ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Max_Loan_amount_Not_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Max_Loan_amount_Not_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Max Loan amount Not Applicable</label>
    <type>Checkbox</type>
</CustomField>