ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Max_Tenure_Not_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Max_Tenure_Not_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Max Tenure Not Applicable</label>
    <type>Checkbox</type>
</CustomField>