ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/MaximumAge__c.field-meta.xml
<CustomField>
    <fullName>MaximumAge__c</fullName>
    <label>Maximum Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>