ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/MaximumCIBILScore__c.field-meta.xml
<CustomField>
    <fullName>MaximumCIBILScore__c</fullName>
    <label>Maximum CIBIL Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>