ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Mfr_Exp_Reimburse__c.field-meta.xml
<CustomField>
    <fullName>Mfr_Exp_Reimburse__c</fullName>
    <label>Mfr Exp. Reimburse %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>