ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Mfr_Exp_Reimburse_Amt__c.field-meta.xml
<CustomField>
    <fullName>Mfr_Exp_Reimburse_Amt__c</fullName>
    <label>Mfr Exp. Reimburse Amt</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>