ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Mfr_incentive__c.field-meta.xml
<CustomField>
    <fullName>Mfr_incentive__c</fullName>
    <label>Mfr incentive</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>