ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Mfr_incentive_p__c.field-meta.xml
<CustomField>
    <fullName>Mfr_incentive_p__c</fullName>
    <label>Mfr incentive%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>