ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Min_Loan_Amount_Not_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Min_Loan_Amount_Not_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Min Loan Amount Not Applicable</label>
    <type>Checkbox</type>
</CustomField>