ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Min_Tenure_Not_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Min_Tenure_Not_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Min Tenure Not Applicable</label>
    <type>Checkbox</type>
</CustomField>