ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/MinimumAge__c.field-meta.xml
<CustomField>
    <fullName>MinimumAge__c</fullName>
    <label>Minimum Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>