ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/MinimumCIBILScore__c.field-meta.xml
<CustomField>
    <fullName>MinimumCIBILScore__c</fullName>
    <label>Minimum CIBIL Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>