ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <inlineHelpText>If multi-select needed, enter all codes with comma separate viz., P214, P215</inlineHelpText>
    <label>Model</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>