ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Moratorium_Days__c.field-meta.xml
<CustomField>
    <fullName>Moratorium_Days__c</fullName>
    <label>Moratorium Days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>150</fullName>
            </value>
            <value>
                <fullName>180</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>