ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Nos_of_Asset_Allowed_Min__c.field-meta.xml
<CustomField>
    <fullName>Nos_of_Asset_Allowed_Min__c</fullName>
    <label>Nos. of Asset Allowed Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>