ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Payout_Cap__c.field-meta.xml
<CustomField>
    <fullName>Payout_Cap__c</fullName>
    <inlineHelpText>Leave blank in case Payout validation is not needed on Front UI</inlineHelpText>
    <label>Payout Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>