ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Pending_RC__c.field-meta.xml
<CustomField>
    <fullName>Pending_RC__c</fullName>
    <label>Pending RC %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>