ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Prodcut_Varient_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Prodcut_Varient_Portfolio__c</fullName>
    <label>Prodcut Varient Portfolio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>