ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passenger Vehicles</fullName>
            </value>
            <value>
                <fullName>Two Wheeler</fullName>
            </value>
            <value>
                <fullName>Tractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>