ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Schemes</relationshipName>
    <type>Lookup</type>
</CustomField>