ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PV</fullName>
            </value>
            <value>
                <fullName>TW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>