ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Provision_Channel_Cost__c.field-meta.xml
<CustomField>
    <fullName>Provision_Channel_Cost__c</fullName>
    <label>Provision &amp; Channel Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>