ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/RCU_Post_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>RCU_Post_Disbursement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RCU Post Disbursement</label>
    <type>Checkbox</type>
</CustomField>