ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/RCU_Retention_Charges__c.field-meta.xml
<CustomField>
    <fullName>RCU_Retention_Charges__c</fullName>
    <label>RC Retention Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>