ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Referrer_Incetive__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Incetive__c</fullName>
    <label>Referrer Incetive</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>