ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/RiskBand__c.field-meta.xml
<CustomField>
    <fullName>RiskBand__c</fullName>
    <label>Risk Band</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dark green</fullName>
            </value>
            <value>
                <fullName>Light Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>