ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/RTO_Prefix__c.field-meta.xml
<CustomField>
    <fullName>RTO_Prefix__c</fullName>
    <label>RTO Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>