ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Scheme_Code__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Code__c</fullName>
    <label>Scheme Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>