ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Scheme_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Expiry__c</fullName>
    <label>Scheme Expiry</label>
    <type>Date</type>
</CustomField>