ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Service_Charges_p__c.field-meta.xml
<CustomField>
    <fullName>Service_Charges_p__c</fullName>
    <label>Service Charges%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>