ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/ServiceCharges__c.field-meta.xml
<CustomField>
    <fullName>ServiceCharges__c</fullName>
    <label>Service Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>