ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Stamping_Charges__c.field-meta.xml
<CustomField>
    <fullName>Stamping_Charges__c</fullName>
    <label>Stamping Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>