ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <inlineHelpText>If multi-select needed, enter all codes with comma separate viz., A, B</inlineHelpText>
    <label>State</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>