ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/SubProduct__c.field-meta.xml
<CustomField>
    <fullName>SubProduct__c</fullName>
    <label>Sub Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>