ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Taluka__c.field-meta.xml
<CustomField>
    <fullName>Taluka__c</fullName>
    <inlineHelpText>If multi-select needed, enter all codes with comma separate viz., A,B,C</inlineHelpText>
    <label>Taluka</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>