ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Tenure_Min_in_months__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Min_in_months__c</fullName>
    <label>Tenure - Min (in months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>