ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Trade_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Trade_Certificate__c</fullName>
    <label>Trade Certificate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>