ProdIND/ProdPrograms/force-app/main/default/objects/Schemes__c/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Unique_Identifier</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>